# arbiter

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  demo-analysis.md  persona-research.md  scifi-ui-research.md  scifi-ux-blueprint.md  textual-capabilities.md  web-capabilities.md  web-scifi-techniques.md
.planning/debug/: scoring-not-shown.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-REQUIREMENTS.md
audience-display/: ANIMATION_DESIGN_CONCEPT.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: NEBULA-FOG-2026-Judge-Scoresheet.csv  architecture.md  awesome-list-submissions.md  benchmark-dataset.json  blog-post-devto.md  conference-abstract.md  ctf-patterns.json  ctf-review-findings.md  ctf.html  how-we-built-arbiter.html  how-we-built-arbiter.md  index.html  judge-instructions.md  linkedin-post.md  operator-guide.md  paper-outline.md  plugin-guide.md  pre-event-checklist.md  prize-breakdown.md  red-team-report.html  red-team-report.md  red-team-slides.html  reddit-posts.md  social-posts.md  zoom-capture-setup.md
operator-dashboard/: index.html  package.json  tsconfig.app.json  vite.config.ts
plugins/: example-hackathon.yaml
public/: audience-criteria.html  judge-criteria.html  scoreboard.html
research/: animation-research.md
scripts/: pre_event_smoke.py  test_e2e_live.py  test_frontend.sh  test_tts_live.py  verify_event_log.py
shared/: tracks.json
src/: logging_config.py  main.py  utils.py
tests/: conftest.py  injection_corpus.py  moe_demo_results.json  test_cached_observation_scoring.py  test_calibration.py  test_cascading_failure.py  test_chaos_marathon.py  test_circuit_breaker.py  test_circuit_breaker_integration.py  test_commentary_full_delivery.py  test_commentary_generator.py  test_commentary_tts_real_behavior.py  test_cross_reference.py  test_defense_edge_cases.py  test_defense_real_behavior.py  test_deliberation_engine.py  test_deliberation_models.py  test_deliberation_pipeline.py  test_demo_machine_edge_cases.py  test_demo_timer.py  test_demo_timer_autostop.py  test_display_and_xss.py  test_display_json_contract.py  test_display_server_start.py  test_dress_rehearsal.py  test_e2e_event_wiring.py  test_e2e_full_flow.py  test_e2e_moe_scoring.py  test_e2e_pipeline_chain.py  test_e2e_task_draining.py  test_edge_cases_event.py  test_event_day_scenarios.py  test_event_logger.py  test_eventbus_backpressure.py  test_export.py  test_gemini_live_model_compat.py  test_gemini_session_backoff.py  test_gemini_session_receive.py  test_historical_pipeline_replay.py  test_human_scores.py  (+50 more)
unused/: nobonusteam.json  revealteam.json
(+255 files in other folders)
