[project]
name = "arbiter"
version = "0.1.0"
description = "Live AI judge agent for NEBULA:FOG 2026 hackathon"
requires-python = ">=3.11"
dependencies = [
    "google-genai~=1.13",
    "opencv-python~=4.11",
    "pyaudio~=0.2.14",
    "python-statemachine~=2.5",
    "pydantic~=2.11",
    "pillow",
    "numpy",
    "python-dotenv",
    "pytesseract~=0.3.13",
    "cartesia~=3.0",
    "fastapi~=0.129",
    "uvicorn>=0.40.0",
    "jinja2>=3.1.6",
    "textual~=1.0",
    "tenacity~=9.0",
    "anthropic>=0.40",
    "openai>=1.50",
]

[project.scripts]
arbiter = "src.main:main"

[tool.ruff]
line-length = 120

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
]
